--- a/document/book.bib
+++ b/document/book.bib
@@ -4478,4 +4478,55 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   file = {/Users/davidjohnbaker/Zotero/storage/CSCREVG8/Bates et al. - 2015 - Fitting Linear Mixed-Effects Models Using blme4.pdf}
 }
 
+@book{kahnemanThinkingFastSlow2012,
+  address = {London},
+  title = {Thinking, Fast and Slow},
+  isbn = {978-0-14-103357-0},
+  language = {eng},
+  publisher = {{Penguin Books}},
+  author = {Kahneman, Daniel},
+  year = {2012},
+  note = {OCLC: 798805166}
+}
+
+@book{meehlClinicalStatisticalPrediction1954,
+  address = {Minneapolis},
+  title = {Clinical versus Statistical Prediction: {{A}} Theoretical Analysis and a Review of the Evidence.},
+  shorttitle = {Clinical versus Statistical Prediction},
+  language = {en},
+  publisher = {{University of Minnesota Press}},
+  author = {Meehl, Paul E.},
+  year = {1954},
+  doi = {10.1037/11281-000}
+}
+
+@article{loggAlgorithmAppreciationPeople2019,
+  title = {Algorithm Appreciation: {{People}} Prefer Algorithmic to Human Judgment},
+  volume = {151},
+  issn = {07495978},
+  shorttitle = {Algorithm Appreciation},
+  doi = {10.1016/j.obhdp.2018.12.005},
+  language = {en},
+  journal = {Organizational Behavior and Human Decision Processes},
+  author = {Logg, Jennifer M. and Minson, Julia A. and Moore, Don A.},
+  month = mar,
+  year = {2019},
+  pages = {90-103}
+}
+
+@incollection{cleeremansComputationalModelsImplicit2008,
+  address = {Cambridge},
+  title = {Computational {{Models}} of {{Implicit Learning}}},
+  isbn = {978-0-511-81677-2},
+  language = {en},
+  booktitle = {The {{Cambridge Handbook}} of {{Computational Psychology}}},
+  publisher = {{Cambridge University Press}},
+  author = {Cleeremans, Axel and Dienes, Zolt\'an},
+  editor = {Sun, Ron},
+  year = {2008},
+  pages = {396-421},
+  file = {/Users/davidjohnbaker/Zotero/storage/64YLGLCT/Cleeremans and Dienes - 2008 - Computational Models of Implicit Learning.pdf},
+  doi = {10.1017/CBO9780511816772.018}
+}
+
 
