--- a/document/references.bib
+++ b/document/references.bib
@@ -630,3 +630,163 @@
   year = {2001},
   file = {/Users/davidjohnbaker/Zotero/storage/CK9HXD85/Gillespie - Melodic Dictation Scoring Methods An Exploratory .pdf},
 }
+@Book{kahnemanThinkingFastSlow2012,
+  address = {London},
+  title = {Thinking, Fast and Slow},
+  isbn = {978-0-14-103357-0},
+  language = {eng},
+  publisher = {{Penguin Books}},
+  author = {Daniel Kahneman},
+  year = {2012},
+  note = {OCLC: 798805166},
+}
+
+@Book{meehlClinicalStatisticalPrediction1954,
+  address = {Minneapolis},
+  title = {Clinical versus Statistical Prediction: {{A}} Theoretical Analysis and a Review of the Evidence.},
+  shorttitle = {Clinical versus Statistical Prediction},
+  language = {en},
+  publisher = {{University of Minnesota Press}},
+  author = {Paul E. Meehl},
+  year = {1954},
+  doi = {10.1037/11281-000},
+}
+
+@Article{loggAlgorithmAppreciationPeople2019,
+  title = {Algorithm Appreciation: {{People}} Prefer Algorithmic to Human Judgment},
+  volume = {151},
+  issn = {07495978},
+  shorttitle = {Algorithm Appreciation},
+  doi = {10.1016/j.obhdp.2018.12.005},
+  language = {en},
+  journal = {Organizational Behavior and Human Decision Processes},
+  author = {Jennifer M. Logg and Julia A. Minson and Don A. Moore},
+  month = {mar},
+  year = {2019},
+  pages = {90-103},
+}
+@Article{paneyTeachingMelodicDictation2014,
+  title = {Teaching {{Melodic Dictation}} in {{Advanced Placement Music Theory}}},
+  volume = {61},
+  issn = {0022-4294, 1945-0095},
+  doi = {10.1177/0022429413508411},
+  abstract = {This study approaches to teaching melodic dictation skills of Advanced Placement (AP) Music Theory were examined. Twelve high school teachers from four states were interviewed. Four themes emerged from the interview transcripts: cognitive frameworks, processing strategies, rhythm, and course design. Participants generally confirmed established understandings of aural skills pedagogy, particularly in areas of pattern instruction, connecting aural and written theory, connecting sight-singing and dictation, incorporating scale degree function, targeting melodic ``bookends,'' focusing on the big picture, sequencing curricula, and incorporating familiar melodies. Unique to the findings of this study were participants' positive attitudes toward a standardized test and their concern for the students' psychological barriers inherent in learning aural skills. A general indifference to rhythm counting systems and a common acknowledgment of students' difficulties with rhythmic notation also was found. Recommendations for further research include a largescale survey of melodic dictation strategies taught by AP Music Theory teachers, empirical investigation of the efficacy of specific counting systems, comparison of students' reported dictation strategies and their success with dictation on the AP exam, and exploration of the influence of psychological fortitude on the dictation process.},
+  language = {en},
+  number = {4},
+  journal = {Journal of Research in Music Education},
+  author = {Andrew S. Paney and Nathan O. Buonviri},
+  month = {jan},
+  year = {2014},
+  pages = {396-414},
+  file = {/Users/davidjohnbaker/Zotero/storage/HB8PVA5N/Paney and Buonviri - 2014 - Teaching Melodic Dictation in Advanced Placement M.pdf},
+}
+@Article{pembrookInterferenceTranscriptionProcess1986,
+  title = {Interference of the {{Transcription Process}} and {{Other Selected Variables}} on {{Perception}} and {{Memory}} during {{Melodic Dictation}}},
+  volume = {34},
+  issn = {00224294},
+  doi = {10.2307/3345259},
+  language = {en},
+  number = {4},
+  journal = {Journal of Research in Music Education},
+  author = {Randall G. Pembrook},
+  year = {1986},
+  pages = {238},
+  file = {/Users/davidjohnbaker/Zotero/storage/YIHEK2A4/Pembrook - 1986 - Interference of the Transcription Process and Othe.pdf},
+}
+@Article{conklinMultipleViewpointSystems1995,
+  title = {Multiple Viewpoint Systems for Music Prediction},
+  volume = {24},
+  issn = {0929-8215, 1744-5027},
+  doi = {10.1080/09298219508570672},
+  abstract = {This paper examines the prediction and generation of music using a multiple viewpoint system, a collection of independent views of the musical surface each of which models a specific type of musical phenomena. Both the general style and a particular piece are modeled using dual short-term and long-term theories, and the model is created using machine learning techniques on a corpus of musical examples.},
+  language = {en},
+  number = {1},
+  journal = {Journal of New Music Research},
+  author = {Darrell Conklin and Ian H. Witten},
+  month = {mar},
+  year = {1995},
+  pages = {51-73},
+  file = {/Users/davidjohnbaker/Zotero/storage/3H4B74DX/Conklin and Witten - 1995 - Multiple viewpoint systems for music prediction.pdf},
+}
+@Article{shannonMathematicalTheoryCommunication1948,
+  title = {A Mathematical Theory of Communication},
+  volume = {27},
+  journal = {Bell System Technical Journal},
+  author = {Claude Shannon},
+  year = {1948},
+  pages = {379--423},
+  file = {/Users/davidjohnbaker/Zotero/storage/AZE4K86F/Shannon - A mathematical theory of communication.pdf},
+}
+@Article{jamiesonApplyingExemplarModel2009,
+  title = {Applying an Exemplar Model to the Serial Reaction-Time Task: {{Anticipating}} from Experience},
+  volume = {62},
+  issn = {1747-0218, 1747-0226},
+  shorttitle = {Applying an Exemplar Model to the Serial Reaction-Time Task},
+  doi = {10.1080/17470210802557637},
+  language = {en},
+  number = {9},
+  journal = {Quarterly Journal of Experimental Psychology},
+  author = {Randall K. Jamieson and D. J. K. Mewhort},
+  month = {sep},
+  year = {2009},
+  pages = {1757-1783},
+  file = {/Users/davidjohnbaker/Zotero/storage/EEEUFT6B/Jamieson and Mewhort - 2009 - Applying an exemplar model to the serial reaction-.pdf},
+}
+@Article{harrisonApplyingModernPsychometric2017,
+  title = {Applying Modern Psychometric Techniques to Melodic Discrimination Testing: {{Item}} Response Theory, Computerised Adaptive Testing, and Automatic Item Generation},
+  volume = {7},
+  copyright = {2017 The Author(s)},
+  issn = {2045-2322},
+  shorttitle = {Applying Modern Psychometric Techniques to Melodic Discrimination Testing},
+  doi = {10.1038/s41598-017-03586-z},
+  abstract = {Modern psychometric theory provides many useful tools for ability testing, such as item response theory, computerised adaptive testing, and automatic item generation. However, these techniques have yet to be integrated into mainstream psychological practice. This is unfortunate, because modern psychometric techniques can bring many benefits, including sophisticated reliability measures, improved construct validity, avoidance of exposure effects, and improved efficiency. In the present research we therefore use these techniques to develop a new test of a well-studied psychological capacity: melodic discrimination, the ability to detect differences between melodies. We calibrate and validate this test in a series of studies. Studies 1 and 2 respectively calibrate and validate an initial test version, while Studies 3 and 4 calibrate and validate an updated test version incorporating additional easy items. The results support the new test's viability, with evidence for strong reliability and construct validity. We discuss how these modern psychometric techniques may also be profitably applied to other areas of music psychology and psychological science in general.},
+  language = {en},
+  number = {1},
+  journal = {Scientific Reports},
+  author = {Peter M. C. Harrison and Tom Collins and Daniel M{\"u}llensiefen},
+  month = {jun},
+  year = {2017},
+  pages = {3618},
+  file = {/Users/davidjohnbaker/Zotero/storage/XY8A4DMJ/Harrison et al. - 2017 - Applying modern psychometric techniques to melodic.pdf;/Users/davidjohnbaker/Zotero/storage/X774FSQC/s41598-017-03586-z.html},
+}
+
+@Article{wolfGradesReflectDevelopment2014,
+  title = {Do Grades Reflect the Development of Excellence in Music Students? {{The}} Prognostic Validity of Entrance Exams at Universities of Music},
+  volume = {18},
+  issn = {1029-8649, 2045-4147},
+  shorttitle = {Do Grades Reflect the Development of Excellence in Music Students?},
+  doi = {10.1177/1029864914530394},
+  abstract = {For successful admission to universities of music, prospective students have to pass entrance exams which assess the quality of their music-making and, in some instances, their abilities in music theory and aural training. However, only very little is known about the validity of such grades and the skill development of expectant professional musicians. For the first time, the present study analyzes the long-term development of grades of students in a bachelor degree program (N = 63) over a period of 3 years. As the grades were neither interval-scaled nor normally distributed, a logistic regression analysis was calculated to quantify the predictability of final grades in the main instrument and music theory based on the respective entrance exam grades. The prognostic validity was low for grades in both the main instrument and music theory/aural training (Nagelkerke R2 = .08 and .01). This result can be mainly attributed to two explanations: First, university grades are often inflated and subject to ceiling effects. Second, the curricula in music theory contain such variety that it is impossible to define what all students across the board learn. In order to better define expertise skill development in students, we suggest initiating regular competency-based assessments for professional musicians at a pre-collegiate and collegiate level.},
+  language = {en},
+  number = {2},
+  journal = {Musicae Scientiae},
+  author = {Anna Wolf and Reinhard Kopiez},
+  month = {jun},
+  year = {2014},
+  pages = {232-248},
+  file = {/Users/davidjohnbaker/Zotero/storage/F225M3F7/Wolf and Kopiez - 2014 - Do grades reflect the development of excellence in.pdf},
+}
+@InCollection{cleeremansComputationalModelsImplicit2008,
+  address = {Cambridge},
+  title = {Computational {{Models}} of {{Implicit Learning}}},
+  isbn = {978-0-511-81677-2},
+  language = {en},
+  booktitle = {The {{Cambridge Handbook}} of {{Computational Psychology}}},
+  publisher = {{Cambridge University Press}},
+  author = {Axel Cleeremans and Zolt{\a'a}n Dienes},
+  editor = {Ron Sun},
+  year = {2008},
+  pages = {396-421},
+  file = {/Users/davidjohnbaker/Zotero/storage/64YLGLCT/Cleeremans and Dienes - 2008 - Computational Models of Implicit Learning.pdf},
+  doi = {10.1017/CBO9780511816772.018},
+}
+@Article{karpinskiModelMusicPerception1990,
+  title = {A {{Model}} for {{Music Perception}} and {{Its Implications}} in {{Melodic Dictation}}},
+  volume = {4},
+  number = {1},
+  journal = {Journal of Music Theory Pedagogy},
+  author = {Gary Karpinski},
+  year = {1990},
+  pages = {191-229},
+  file = {/Users/davidjohnbaker/Zotero/storage/JHTF8BJE/Karpinski - 1990 - A Model for Music Perception and Its Implications .pdf},
+}
